--- a/MVCFilmes/appsettings.json
+++ b/MVCFilmes/appsettings.json
@@ -2,8 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVCFilmesContext": "Server=(localdb)\\mssqllocaldb;Database=MVCFilmesContext-94cbfac2-60ba-475a-baa5-f63145cd44b4;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
